config for test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_DB=car_rating
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=asdf
-  web:
+  backend:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
