--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 gunicorn==20.0.4
 whitenoise==5.2.0
 requests==2.25.1
+django-heroku==0.3.1
 # psycopg2-binary==2.8.6
 # pytz==2020.5
 # sqlparse==0.4.1
